# hbapp_public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: FindCurl.cmake  FindMYSQLPP.cmake  hbapp.cmake  publiclib.cmake
docs/: build-ubuntu-18.04.md  cmake-doc.md  ubuntu-18.04.md  ubuntu-lib-info.md
hb/: CMakeLists.txt
hb/include/hb/: hb.h  (+1 more)
hb/test/: hb_test.cpp
plugins/: CMakeLists.txt
plugins/http_server_plugin/: CMakeLists.txt  handle.cpp  handler.cpp  http_server_plugin.cpp  http_server_plugin_impl.cpp  listener.cpp  session.cpp  session_ssl.cpp
plugins/http_server_plugin/include/hb/http_server_plugin/: handle.h  handler.h  http_server_error.h  http_server_plugin.h  http_server_plugin_impl.h  listener.h  session.h  session_ssl.h  ssl.doc
plugins/json_table_plugin/: CMakeLists.txt  json_table_plugin.cpp  json_table_plugin_impl.cpp
plugins/json_table_plugin/include/hb/json_table_plugin/: constant_var.h  json_table_error.h  json_table_plugin.h  json_table_plugin_impl.h
plugins/log_plugin/: log_plugin.cpp
plugins/log_plugin/include/hb/log_plugin/: log_plugin.h
plugins/log_server_plugin/: log_server_plugin.cpp  log_server_plugin_impl.cpp
plugins/log_server_plugin/include/hb/log_server_plugin/: log_server_plugin.h  log_server_plugin_impl.h
plugins/msg_security_plugin/: CMakeLists.txt  README.md  msg_security_plugin.cpp  msg_security_plugin_impl.cpp
plugins/msg_security_plugin/include/hb/msg_security_plugin/: msg_security_plugin.h  msg_security_plugin_impl.h  smg_security_error.h
plugins/msg_security_plugin/test/: CMakeLists.txt  msg_security_test.cpp
plugins/mysql_plugin/: CMakeLists.txt  mysql_plugin.cpp  mysql_plugin_impl.cpp
plugins/mysql_plugin/include/hb/mysql_plugin/: mysql_connection.h  mysql_error.h  mysql_plugin.h  mysql_plugin_impl.h
plugins/send_mail_plugin/: CMakeLists.txt  send_mail_plugin.cpp  send_mail_plugin_impl.cpp  session.cpp
plugins/send_mail_plugin/include/hb/send_mail_plugin/: send_mail_error.h  send_mail_plugin.h  send_mail_plugin_impl.h  session.h
plugins/thread_pool_plugin/: thread_pool_plugin.cpp  thread_pool_plugin_impl.cpp
plugins/thread_pool_plugin/include/hb/thread_pool_plugin/: thread_pool_error.h  thread_pool_plugin.h  thread_pool_plugin_impl.h
script/: linux.toolchain.cmake
(+48 files in other folders)
