add_subdirectory(thread_pool_plugin)
add_subdirectory(log_plugin)
add_subdirectory(http_server_plugin)
add_subdirectory(monitor_price_plugin)
add_subdirectory(send_mail_plugin)
add_subdirectory(mysql_plugin)
add_subdirectory(grid_db_plugin)
add_subdirectory(grid_trad_plugin)
add_subdirectory(trad_api_plugin)
add_subdirectory(monitor_mail_plugin)
add_subdirectory(log_server_plugin)